# exchange

./: .env.sample  .gitignore  README.md  package-lock.json  package.json  server.js
api/: .env.example  Cargo.toml
api/src/: main.rs
api/src/middlewares/: auth.rs
api/src/routes/: auth.rs  mod.rs
api/src/utils/: jwt.rs
config/: db.js
controller/: auth.controller.js  chat.controller.js  comment.controller.js  post.controller.js
db/: .env  Cargo.toml  diesel.toml
db/migrations/2025-09-06-064232_create_users/: up.sql
db/src/: lib.rs  models.rs  schema.rs
middlewares/: verifyJWT.js
models/: chat.model.js  comment.model.js  post.model.js
routes/: chat.routes.js  post.routes.js  user.routes.js
