[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }